    - Default: <red>
    - The colour used to show the deny and cancel commands.
    - Allowed colours: <black>,<dark_blue>,<dark_green>,<dark_aqua>,<dark_red>,<dark_purple>,<gold>,<gray>,<dark_gray>,<blue>,<green>,<aqua>,<red>,<light_purple>,<yellow>,<white>"
  - Fix hardcoded $ currency symbol in message, courtesy of Warrior with PR #7843.
0.101.1.14:
  - Fix Towny using VaultUnlockedEconomyProvider when someone is using VaultUnlocked.jar and a legacy Vault economy plugin.
  - Fix messages missing their Hovers and non-functional Clickables.
    - Closes #7852
  - Update MockBukkit to 4.50.0.
0.101.1.15:
  - Add TownCalculateMaxTownBlocksEvent, courtesy of Warrior with PR #7857.
    - Adds an event that is fired when the max town size is calculated, allowing plugins to change/override it in a more dynamic manner.
  - Fix throwing TownCalculateMaxTownBlocksEvent async.
  - Fix resident purge messaging saying it is deleting a resident when its really just trying to remove the resident's town.
  - Fix inaccurate removal message when inactive residents are only losing their town, also suppress resident-deleted-messages when more than 50 residents are removed at once.
  - Fix selection gui item ordering being wack, courtesy of Warrior with PR #7866.
    - /towny switches, /towny itemuse, /towny allowedblocks should maintain a sane ordering.
  - Fix tasks/timers not being shut down before datasource, courtesy of Warrior with PR #7865.
  - Re-add switch tests on left click for specified switch items.
0.101.1.16:
  - Fix nation plot perms not being given out for un-conquered towns when are_conquered_towns_given_nation_plot_perms is set to true.
  - Update Adventure for 1.21.6 & 1.21.7 support, courtesy of Warrior with PR #7876.
0.101.1.17:
  - Read Ascii map symbols from the config on first load.
    - Closes #7875.
0.101.2.0:
  - Bump version for release.
0.101.2.1:
  - Send the eco prefix with rename calls to VaultUnlocked, courtesy of creatorfromhell with PR #7878.