@@ -424,6 +424,8 @@ public enum HelpMenu {
 			return new MenuBuilder("townyadmin eco")
 				.add("resetbanks {amount}", Translatable.of("ta_eco_resetbanks_help"))
 				.add("depositall [amount]", Translatable.of("ta_depositall_help_0"))
+				.add("depositalltowns [amount]", Translatable.of("ta_depositall_help_1"))
+				.add("depositallnations [amount]", Translatable.of("ta_depositall_help_2"))
 				.add("convert modern", Translatable.of("ta_eco_convert_modern_help"))
 				.add("convert [economy]", Translatable.of("ta_eco_convert_help"))
 				.add("info ?", Translatable.of("ta_eco_info_help"));
@@ -435,6 +437,22 @@ public enum HelpMenu {
 		protected MenuBuilder load() {
 			return new MenuBuilder("townyadmin eco depositall")
 				.add("[amount]", Translatable.of("ta_depositall_help_0"));
+		}
+	},
+
+	TA_DEPOSITALLTOWNS {
+		@Override
+		protected MenuBuilder load() {
+			return new MenuBuilder("townyadmin eco depositalltowns")
+				.add("[amount]", Translatable.of("ta_depositall_help_1"));
+		}
+	},
+
+	TA_DEPOSITALLNATIONS {
+		@Override
+		protected MenuBuilder load() {
+			return new MenuBuilder("townyadmin eco depositallnations")
+				.add("[amount]", Translatable.of("ta_depositall_help_2"));
 		}
 	},
 
